--- a/config_resp.json
+++ b/config_resp.json
@@ -9,7 +9,7 @@
     "data_loader": {
         "type": "YesNoDataLoader",
         "args":{
-            "data_dir": "data/",
+            "data_dir": "data/resp/",
             "batch_size": 128,
             "shuffle": true,
             "validation_split": 0.1,
