--- a/config_resp.json
+++ b/config_resp.json
@@ -26,7 +26,7 @@
     },
     "loss": "cross_entropy",
     "metrics": [
-        "accuracy", "top_k_acc"
+        "accuracy", "speficity", "sensitivity_task2", "score_task2"
     ],
     "lr_scheduler": {
         "type": "StepLR",
