--- a/config_task21.json
+++ b/config_task21.json
@@ -45,7 +45,8 @@
         "monitor": "min val_loss",
         "early_stop": 10,
 
-        "tensorboard": true
+        "tensorboard": true,
+        "wandb": false
     },
 
     "main": {
