--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py @ file:///opt/conda/conda-bld/absl-py_1639803114343/work
 appdirs==1.4.4
 asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
 audioread==2.1.9
@@ -7,23 +8,30 @@ brotlipy==0.7.0
 certifi==2022.5.18.1
 cffi @ file:///opt/conda/conda-bld/cffi_1642701102775/work
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+click @ file:///tmp/build/80754af9/click_1646056590078/work
 cryptography @ file:///tmp/build/80754af9/cryptography_1652101588893/work
 cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
 debugpy @ file:///tmp/build/80754af9/debugpy_1637091799509/work
 decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+docker-pycreds @ file:///Users/ktietz/demo/mc3/conda-bld/docker-pycreds_1630654474270/work
 entrypoints @ file:///tmp/build/80754af9/entrypoints_1649926439650/work
 executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
 fonttools==4.25.0
+gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
+GitPython @ file:///tmp/build/80754af9/gitpython_1624609474443/work
+grpcio @ file:///tmp/build/80754af9/grpcio_1637590821884/work
 idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1648544546694/work
 ipykernel @ file:///tmp/build/80754af9/ipykernel_1647000773790/work/dist/ipykernel-6.9.1-py3-none-any.whl
 ipython @ file:///opt/conda/conda-bld/ipython_1651600145335/work
 jedi @ file:///tmp/build/80754af9/jedi_1644297102865/work
 joblib==1.1.0
 jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1650622202839/work
 jupyter-core @ file:///opt/conda/conda-bld/jupyter_core_1651671229925/work
-kiwisolver @ file:///opt/conda/conda-bld/kiwisolver_1638569886207/work
+kiwisolver @ file:///opt/conda/conda-bld/kiwisolver_1653292039266/work
 librosa==0.9.1
 llvmlite==0.38.1
+Markdown @ file:///tmp/build/80754af9/markdown_1614363852612/work
 matplotlib @ file:///tmp/build/80754af9/matplotlib-suite_1647441664166/work
 matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
 mkl-fft==1.3.1
@@ -37,12 +45,15 @@ numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1652801679809/work
 packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
 pandas==1.4.2
 parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pathtools @ file:///Users/ktietz/demo/mc3/conda-bld/pathtools_1629713893697/work
 pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==9.0.1
 pooch==1.6.0
+promise @ file:///tmp/build/80754af9/promise_1614011640420/work
 prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
 protobuf==3.20.1
+psutil @ file:///tmp/build/80754af9/psutil_1612297992929/work
 ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
@@ -53,16 +64,22 @@ pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
 PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 pytz==2021.3
+PyYAML==6.0
 pyzmq @ file:///tmp/build/80754af9/pyzmq_1638434985866/work
 requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
 resampy==0.2.2
 scikit-learn==1.1.1
 scipy @ file:///tmp/build/80754af9/scipy_1641555004408/work
 seaborn @ file:///tmp/build/80754af9/seaborn_1629307859561/work
+sentry-sdk @ file:///home/conda/feedstock_root/build_artifacts/sentry-sdk_1652206962720/work
+setproctitle @ file:///tmp/build/80754af9/setproctitle_1611517540245/work
+shortuuid @ file:///home/conda/feedstock_root/build_artifacts/shortuuid_1636643788196/work
 sip==4.19.13
 six @ file:///tmp/build/80754af9/six_1644875935023/work
+smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
 SoundFile==0.10.3.post1
 stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+tensorboard==2.0.0
 tensorboardX @ file:///tmp/build/80754af9/tensorboardx_1621440489103/work
 threadpoolctl==3.1.0
 torch==1.11.0
@@ -73,4 +90,7 @@ tqdm @ file:///opt/conda/conda-bld/tqdm_1650891076910/work
 traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
 typing_extensions @ file:///opt/conda/conda-bld/typing_extensions_1647553014482/work
 urllib3 @ file:///opt/conda/conda-bld/urllib3_1650639997961/work
+wandb @ file:///home/conda/feedstock_root/build_artifacts/wandb_1653599396320/work
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
+zipp @ file:///opt/conda/conda-bld/zipp_1652341764480/work
