--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,12 @@
 name: biocas
 channels:
   - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - absl-py=0.15.0=pyhd3eb1b0_0
   - asttokens=2.0.5=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
@@ -12,16 +14,20 @@ dependencies:
   - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py39h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.18.1=h7f8727e_0
   - ca-certificates=2022.4.26=h06a4308_0
   - certifi=2022.5.18.1=py39h06a4308_0
   - cffi=1.15.0=py39hd667e15_1
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py39h06a4308_0
   - cryptography=37.0.1=py39h9ce1e76_0
   - cudatoolkit=10.2.89=hfd86e86_1
   - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py39h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - docker-pycreds=0.4.0=pyhd3eb1b0_0
   - entrypoints=0.4=py39h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.4=h295c915_0
@@ -30,13 +36,17 @@ dependencies:
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=h70c0345_0
   - giflib=5.2.1=h7b6447c_0
+  - gitdb=4.0.7=pyhd3eb1b0_0
+  - gitpython=3.1.18=pyhd3eb1b0_1
   - glib=2.69.1=h4ff587b_1
   - gmp=6.2.1=h2531618_2
   - gnutls=3.6.15=he1e5248_0
+  - grpcio=1.42.0=py39hce63b2e_0
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
+  - importlib-metadata=4.11.3=py39h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.9.1=py39h06a4308_0
   - ipython=8.3.0=py39h06a4308_0
@@ -44,7 +54,7 @@ dependencies:
   - jpeg=9e=h7f8727e_0
   - jupyter_client=7.2.2=py39h06a4308_0
   - jupyter_core=4.10.0=py39h06a4308_0
-  - kiwisolver=1.3.2=py39h295c915_0
+  - kiwisolver=1.4.2=py39h295c915_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -68,8 +78,9 @@ dependencies:
   - libwebp=1.2.2=h55f646e_0
   - libwebp-base=1.2.2=h7f8727e_0
   - libxcb=1.15=h7f8727e_0
-  - libxml2=2.9.12=h74e7548_2
+  - libxml2=2.9.14=h74e7548_0
   - lz4-c=1.9.3=h295c915_1
+  - markdown=3.3.4=py39h06a4308_0
   - matplotlib=3.5.1=py39h06a4308_1
   - matplotlib-base=3.5.1=py39ha18d171_1
   - matplotlib-inline=0.1.2=pyhd3eb1b0_2
@@ -89,13 +100,16 @@ dependencies:
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py39h295c915_0
   - parso=0.8.3=pyhd3eb1b0_0
+  - pathtools=0.1.2=pyhd3eb1b0_1
   - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py39h22f2fdc_0
   - pip=21.2.4=py39h06a4308_0
+  - promise=2.3=py39h06a4308_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - protobuf=3.20.1=py39h295c915_0
+  - psutil=5.8.0=py39h27cfd23_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
@@ -106,20 +120,27 @@ dependencies:
   - pysocks=1.7.1=py39h06a4308_0
   - python=3.9.12=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
   - pytorch=1.11.0=py3.9_cuda10.2_cudnn7.6.5_0
   - pytorch-mutex=1.0=cuda
   - pytz=2021.3=pyhd3eb1b0_0
+  - pyyaml=6.0=py39h7f8727e_1
   - pyzmq=22.3.0=py39h295c915_2
   - qt=5.9.7=h5867ecd_1
   - readline=8.1.2=h7f8727e_1
   - requests=2.27.1=pyhd3eb1b0_0
   - scipy=1.7.3=py39hc147768_0
   - seaborn=0.11.2=pyhd3eb1b0_0
+  - sentry-sdk=1.5.12=pyhd8ed1ab_0
+  - setproctitle=1.2.2=py39h27cfd23_1004
   - setuptools=61.2.0=py39h06a4308_0
+  - shortuuid=1.0.8=py39hf3d152e_0
   - sip=4.19.13=py39h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
+  - smmap=4.0.0=pyhd3eb1b0_0
   - sqlite=3.38.3=hc218d9a_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - tensorboard=2.0.0=pyhb38c66f_1
   - tensorboardx=2.2=pyhd3eb1b0_0
   - tk=8.6.11=h1ccaba5_1
   - torchaudio=0.11.0=py39_cu102
@@ -127,14 +148,19 @@ dependencies:
   - tornado=6.1=py39h27cfd23_0
   - tqdm=4.64.0=py39h06a4308_0
   - traitlets=5.1.1=pyhd3eb1b0_0
+  - typing-extensions=4.1.1=hd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - tzdata=2022a=hda174b7_0
   - urllib3=1.26.9=py39h06a4308_0
+  - wandb=0.12.17=pyhd8ed1ab_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
+  - werkzeug=2.0.3=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.2.5=h7f8727e_1
+  - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
+  - zipp=3.8.0=py39h06a4308_0
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.5.2=ha4553b6_0
   - pip:
