--- a/config_task21.json
+++ b/config_task21.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "Resp21Model",
+        "type": "LightCNN",
         "args": {}
     },
     "data_loader": {
