--- a/environment.yml
+++ b/environment.yml
@@ -124,6 +124,7 @@ dependencies:
   - pytorch=1.11.0=py3.9_cuda10.2_cudnn7.6.5_0
   - pytorch-mutex=1.0=cuda
   - pytz=2021.3=pyhd3eb1b0_0
+  - pywavelets=1.3.0=py39h7f8727e_0
   - pyyaml=6.0=py39h7f8727e_1
   - pyzmq=22.3.0=py39h295c915_2
   - qt=5.9.7=h5867ecd_1
