--- a/requirements.txt
+++ b/requirements.txt
@@ -1,304 +1,100 @@
-absl-py==0.12.0
-aiofiles==0.8.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-alembic==1.7.7
-antlr4-python3-runtime==4.9.3
+absl-py==0.15.0
 appdirs==1.4.4
-apsw==3.28.0.post1
-apturl==0.5.2
-argon2-cffi==20.1.0
-asn1crypto==0.24.0
-astroid==2.4.2
-async-generator==1.10
-async-timeout==4.0.2
-atomicwrites==1.1.5
-attrs==19.3.0
-autograd==1.3
-autopage==0.5.0
-autopep8==1.5.4
+asttokens==2.0.5
+audioread==2.1.9
 backcall==0.2.0
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-black==21.5b0
-bleach==3.2.2
-blinker==1.4
-Brlapi==0.7.0
-cached-property==1.5.1
-cachetools==4.2.2
-certifi==2019.11.28
-cffi==1.14.4
-cfgv==3.3.1
-chardet==3.0.4
-charset-normalizer==2.0.12
-chrome-gnome-shell==0.0.0
-click==7.1.2
-cliff==3.10.1
-cmaes==0.8.2
-cmd2==2.4.1
-colorama==0.4.3
-colorlog==6.6.0
-command-not-found==0.3
-commonmark==0.9.1
-crcmod==1.7
-cryptography==2.8
-css-parser==1.0.4
-cssselect==1.1.0
-cssutils==1.0.2
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.29.28
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-dict-toolbox==2.2.0
-distlib==0.3.1
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==1.16.0
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==0.8.12.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-fasteners==0.17.3
-feedparser==5.2.1
-filelock==3.0.12
-flake8==4.0.1
-flatbuffers==1.12
-frozenlist==1.3.0
-fsspec==2022.5.0
-funcparserlib==0.3.6
-future==0.18.2
-glfw==2.5.3
-google-auth==1.30.0
-google-auth-oauthlib==0.4.4
-greenlet==1.1.2
-grpcio==1.38.0
-Guake==3.6.3
-html2text==2020.1.16
-html5-parser==0.4.9
-html5lib==1.0.1
-httplib2==0.14.0
-hydra-colorlog==1.2.0
-hydra-core==1.2.0
-hydra-optuna-sweeper==1.2.0
-hypothesis==6.0.3
-identify==2.5.1
-idna==2.8
-ifaddr==0.1.6
-imageio==2.9.0
-importlib-metadata==1.5.0
-importlib-resources==5.7.1
-ipykernel==5.4.3
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==4.3.21
-jax==0.2.10
-jaxlib==0.1.64
-jdcal==1.0
-jedi==0.18.0
-Jinja2==2.11.2
-joblib==1.0.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kdtree==0.16
-keyring==18.0.1
-keyrings.alt==3.4.0
-kiwisolver==1.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-libevdev==0.5
-lockfile==0.12.2
-louis==3.12.0
-lxml==4.5.0
-macaroonbakery==1.3.1
-Mako==1.1.0
+Bottleneck==1.3.4
+brotlipy==0.7.0
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.4
+click==8.0.4
+cryptography==37.0.1
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
+docker-pycreds==0.4.0
+entrypoints==0.4
+executing==0.8.3
+fonttools==4.25.0
+gitdb==4.0.7
+GitPython==3.1.18
+grpcio==1.42.0
+idna==3.3
+importlib-metadata==4.11.3
+ipykernel==6.9.1
+ipython==8.3.0
+jedi==0.18.1
+joblib==1.1.0
+jupyter-client==7.2.2
+jupyter-core==4.10.0
+kiwisolver==1.4.2
+librosa==0.9.1
+llvmlite==0.38.1
 Markdown==3.3.4
-MarkupSafe==1.1.0
-matplotlib==3.1.2
-mccabe==0.6.1
-mechanize==0.4.5
-mesh2sdf==0.1.0
-mistune==0.8.4
-monotonic==1.5
-more-itertools==4.2.0
-mpmath==1.2.1
-msgpack==0.6.2
-# Editable install with no version control (mujoco-py==1.50.1.68)
--e /home/zizhao/.local/lib/python3.8/site-packages
-multidict==6.0.2
-mypy-extensions==0.4.3
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.1.2
-nbstripout==0.5.0
-nest-asyncio==1.4.3
-netifaces==0.10.4
-networkx==2.5
-nltk==3.5
-nodeenv==1.6.0
-nose==1.3.7
-notebook==6.2.0
-numexpr==2.7.1
-numpy==1.22.2
-oauth==1.0.1
-oauthlib==3.1.0
-olefile==0.46
-omegaconf==2.2.1
-opencv-python==4.5.5.64
-openpyxl==3.0.3
-opt-einsum==3.3.0
-optuna==2.10.0
-packaging==20.3
-pandas==1.2.4
-pandocfilters==1.4.3
-paramiko==2.6.0
-parso==0.8.1
-pathspec==0.8.1
-pbr==5.4.5
-pexpect==4.6.0
+matplotlib==3.5.1
+matplotlib-inline==0.1.2
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+munkres==1.1.4
+nest-asyncio==1.5.5
+numba==0.55.2
+numexpr==2.8.1
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.2
+parso==0.8.3
+pathtools==0.1.2
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
-pipenv==2020.11.15
-pluggy==0.13.0
-pop==21.0.1
-pop-config==8.0.2
-pop-loop==1.0.4
-pre-commit==2.19.0
-prettytable==3.3.0
-prometheus-client==0.9.0
-prompt-toolkit==3.0.11
-protobuf==3.6.1
-proxy-tools==0.1.0
+Pillow==9.0.1
+pip==21.2.4
+pooch==1.6.0
+promise==2.3
+prompt-toolkit==3.0.20
+protobuf==3.20.1
+psutil==5.8.0
 ptyprocess==0.7.0
-pudb==2022.1.1
-py==1.8.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pychm==0.8.6
-pycodestyle==2.8.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==1.9.73
-pyDeprecate==0.3.2
-pyflakes==2.4.0
-pygame==2.0.1
-pygame-gui==0.5.7
-Pygments==2.7.4
-PyGObject==3.36.0
-PyJWT==1.7.1
-pylint==2.5.3
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-pyperclip==1.8.2
-PyQt5==5.14.1
-PyQtWebEngine==5.14.0
-pyRFC3339==1.1
-pyrsistent==0.17.3
-pytest==4.6.9
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-dotenv==0.20.0
-python-ta==1.6.3
-pytorch-lightning==1.6.3
-pytz==2019.3
-pyudev==0.21.0
-PyWavelets==1.2.0
-pyxdg==0.26
+pure-eval==0.2.2
+pycparser==2.21
+pydub==0.25.1
+Pygments==2.11.2
+pyOpenSSL==22.0.0
+pyparsing==3.0.4
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2021.3
+PyWavelets==1.3.0
 PyYAML==6.0
-pyzmq==21.0.1
-pyzo==4.11.2
-qtconsole==5.0.2
-QtPy==1.9.0
-regex==2021.3.17
-reportlab==3.5.34
-repoze.lru==0.7
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rich==12.4.1
-Routes==2.4.1
-rsa==4.7.2
-scikit-image==0.19.2
-scikit-learn==0.24.1
-scipy==1.8.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-sh==1.14.2
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-sklearn==0.0
-sniffio==1.2.0
-sol-nglod==0.0.0
-sortedcontainers==2.3.0
-soupsieve==1.9.5
-SQLAlchemy==1.4.36
-ssh-import-id==5.10
-stevedore==3.5.0
-sympy==1.10.1
-system-service==0.3
-systemd-python==234
-tables==3.6.1
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-terminado==0.9.2
-testpath==0.4.4
-texttable==1.6.2
-threadpoolctl==2.1.0
-tifffile==2022.2.9
-toml==0.10.2
+pyzmq==22.3.0
+requests==2.27.1
+resampy==0.2.2
+scikit-learn==1.1.1
+scipy==1.7.3
+seaborn==0.11.2
+sentry-sdk==1.5.12
+setproctitle==1.2.2
+setuptools==61.2.0
+shortuuid==1.0.8
+sip==4.19.13
+six==1.16.0
+smmap==4.0.0
+SoundFile==0.10.3.post1
+stack-data==0.2.0
+tensorboard==2.0.0
+tensorboardX==2.2
+threadpoolctl==3.1.0
 torch==1.11.0
-torch-tb-profiler==0.1.0
-torchmetrics==0.8.2
-torchsummary==1.5.1
+torchaudio==0.11.0
 torchvision==0.12.0
 tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-triton==1.0.0
-typeguard==2.10.0
-typing_extensions==4.2.0
-ubuntu-advantage-tools==27.8
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-urwid==2.1.2
-urwid-readline==0.13
-usb-creator==0.3.7
-virtualenv==20.4.2
-virtualenv-clone==0.5.4
-wadllib==1.3.3
-wcwidth==0.1.8
-webencodings==0.5.1
-WebOb==1.8.5
-websocket-client==0.53.0
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-xkit==0.0.0
-xlrd==1.1.0
-xlwt==1.3.0
-yarl==1.7.2
-zeroconf==0.24.4
+tqdm==4.64.0
+traitlets==5.1.1
+typing_extensions==4.1.1
+urllib3==1.26.9
+wandb==0.12.17
+wcwidth==0.2.5
+Werkzeug==2.0.3
+wheel==0.37.1
 zipp==3.8.0
-zope.interface==4.7.1
