--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ sentry-sdk==1.5.12
 setproctitle==1.2.2
 setuptools==61.2.0
 shortuuid==1.0.8
-sip==4.19.13
+#sip==4.19.13
 six==1.16.0
 smmap==4.0.0
 SoundFile==0.10.3.post1
