--- a/config_task21.json
+++ b/config_task21.json
@@ -30,7 +30,7 @@
     },
     "loss": "cross_entropy",
     "metrics": [
-        "accuracy", "speficity", "sensitivity_task2", "score_task2"
+        "accuracy", "specificity", "sensitivity_task2", "score_task2"
     ],
     "lr_scheduler": {
         "type": "StepLR",
