--- a/config_task12.json
+++ b/config_task12.json
@@ -3,7 +3,7 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "LightCNN",
+        "type": "WrappedPretrainedResNet",
         "args": {
             "outdim":7
         }
