--- a/config_task11.json
+++ b/config_task11.json
@@ -28,7 +28,12 @@
             "amsgrad": true
         }
     },
-    "loss": "cross_entropy",
+    "loss": {
+        "type": "cross_entropy",
+        "args": {
+            "weight": [0.35, 0.65]
+        }
+    },
     "metrics": [
         "accuracy", "specificity", "sensitivity_task1", "score_task1"
     ],
