--- a/config_task21.json
+++ b/config_task21.json
@@ -28,7 +28,12 @@
             "amsgrad": true
         }
     },
-    "loss": "cross_entropy",
+    "loss": {
+        "type": "cross_entropy",
+        "args": {
+            "weight": [0.2, 0.5, 0.3]
+        }
+    },
     "metrics": [
         "accuracy", "specificity", "sensitivity_task2", "score_task2"
     ],
