--- a/config_task21.json
+++ b/config_task21.json
@@ -3,9 +3,13 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "WrappedPretrainedResNet",
+        "type": "ASTModel",
         "args": {
-            "outdim":3
+            "label_dim":3, 
+            "input_fdim":128,
+            "input_tdim":256,
+            "audioset_pretrain": true
+           
         }
     },
     "data_loader": {
@@ -23,19 +27,14 @@
     "optimizer": {
         "type": "Adam",
         "args":{
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 0,
             "amsgrad": true
         }
     },
-    "loss": {
-        "type": "cross_entropy",
-        "args": {
-            "weight": [0.2, 0.5, 0.3]
-        }
-    },
+    "loss": "cross_entropy",
     "metrics": [
-        "accuracy", "specificity", "sensitivity_task2", "score_task2"
+        "accuracy", "speficity", "sensitivity_task2", "score_task2"
     ],
     "lr_scheduler": {
         "type": "StepLR",
@@ -45,14 +44,14 @@
         }
     },
     "trainer": {
-        "epochs": 100,
+        "epochs": 1,
 
         "save_dir": "saved/",
         "save_period": 1,
         "verbosity": 2,
         
         "monitor": "min val_loss",
-        "early_stop": 20,
+        "early_stop": 10,
 
         "tensorboard": true,
         "wandb": false
