--- a/config_task22.json
+++ b/config_task22.json
@@ -1,11 +1,14 @@
 {
     "name": "Audio_Resp_22",
     "n_gpu": 1,
-
     "arch": {
-        "type": "WrappedPretrainedResNet",
+        "type": "ASTModel",
         "args": {
-            "outdim":5
+            "label_dim":3, 
+            "input_fdim":128,
+            "input_tdim":256,
+            "audioset_pretrain": true
+           
         }
     },
     "data_loader": {
@@ -23,7 +26,7 @@
     "optimizer": {
         "type": "Adam",
         "args":{
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 0,
             "amsgrad": true
         }
@@ -45,7 +48,7 @@
         }
     },
     "trainer": {
-        "epochs": 100,
+        "epochs": 10,
 
         "save_dir": "saved/",
         "save_period": 1,
