--- a/environment.yml
+++ b/environment.yml
@@ -177,4 +177,7 @@ dependencies:
     - scikit-learn==1.1.1
     - soundfile==0.10.3.post1
     - threadpoolctl==3.1.0
+    - timm==0.4.5
+    - wget
+    
 prefix: /home/zizhao/miniconda3/envs/biocas
