--- a/config_task12.json
+++ b/config_task12.json
@@ -3,9 +3,13 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "WrappedPretrainedResNet",
+        "type": "ASTModel",
         "args": {
-            "outdim":7
+            "label_dim":7, 
+            "input_fdim":128,
+            "input_tdim":256,
+            "audioset_pretrain": true
+           
         }
     },
     "data_loader": {
@@ -23,7 +27,7 @@
     "optimizer": {
         "type": "Adam",
         "args":{
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 0,
             "amsgrad": true
         }
@@ -45,7 +49,7 @@
         }
     },
     "trainer": {
-        "epochs": 100,
+        "epochs": 10,
 
         "save_dir": "saved/",
         "save_period": 1,
