--- a/config_task11.json
+++ b/config_task11.json
@@ -3,11 +3,16 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "WrappedPretrainedResNet",
+        "type": "ASTModel",
         "args": {
-            "outdim":2
+            "label_dim":2, 
+            "input_fdim":128,
+            "input_tdim":256,
+            "audioset_pretrain": true
+           
         }
     },
+    
     "data_loader": {
         "type": "RespDataLoader",
         "args":{
@@ -23,7 +28,7 @@
     "optimizer": {
         "type": "Adam",
         "args":{
-            "lr": 0.001,
+            "lr": 0.0001,
             "weight_decay": 0,
             "amsgrad": true
         }
@@ -45,7 +50,7 @@
         }
     },
     "trainer": {
-        "epochs": 100,
+        "epochs": 10,
 
         "save_dir": "saved/",
         "save_period": 1,
