add preprocess ast wav2vec

--- a/config_task21.json
+++ b/config_task21.json
@@ -22,7 +22,7 @@
             "num_workers": 2,
             "task":2,
             "level":1,
-            "input_dir":"processed_ast"
+            "input_dir":"processed_ast_wav2vec"
         }
     },
     "optimizer": {
