--- a/config_task22.json
+++ b/config_task22.json
@@ -20,7 +20,8 @@
             "validation_split": 0.1,
             "num_workers": 2,
             "task":2,
-            "level":2
+            "level":2,
+            "input_dir":"processed_ast_wav2vec"
         }
     },
     "optimizer": {
@@ -48,7 +49,7 @@
         }
     },
     "trainer": {
-        "epochs": 10,
+        "epochs": 100,
 
         "save_dir": "saved/",
         "save_period": 1,
