--- a/config_task12.json
+++ b/config_task12.json
@@ -3,13 +3,10 @@
     "n_gpu": 1,
 
     "arch": {
-        "type": "ASTModel",
+        "type": "LightCNN",
         "args": {
-            "label_dim":7, 
-            "input_fdim":128,
-            "input_tdim":256,
-            "audioset_pretrain": true
-           
+            "label_dim":7,
+            "indim":1
         }
     },
     "data_loader": {
@@ -21,7 +18,8 @@
             "validation_split": 0.1,
             "num_workers": 2,
             "task":1,
-            "level":2
+            "level":2,
+            "input_dir":"processed_wav2vec"
         }
     },
     "optimizer": {
